# NetSolP-1.0

./: MANIFEST.in  README.md  setup.cfg
PredictionServer/: README  __init__.py  predict.py  requirements_cpu.txt  requirements_gpu.txt
PredictionServer/models/: __init__.py
TrainAndTest/: __init__.py
TrainAndTest/models/: __init__.py
netsolp/: __init__.py
