[metadata]
name = netsolp
version = 1.0.0
description = NetSolP - protein solubility prediction utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = NetSolP authors
license = BSD-3-Clause

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    pandas
    torch
    onnxruntime

[options.packages.find]
where = .
